--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
     <title>IronSkydive</title>
 </head>
 <body>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="#structure">Day Structure</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#schedule">Schedule</a></li>
         </ul>
     </nav>
-    <header>
+    <header class="header">
         <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive logo"> IronSkydive</h1>
         <h2>Let the trip begin</h2>
-        <aside>
+        <aside class="quote">
             <br><small><em>"The best experience of our lives"</em></small><br>Ariel quiñones & Gonzalo Manrique, Ironhack Founders</br></p>
         </aside>
     </header>
-    <section>
+    <section id="general-information" class="dark-background">
         <article>
             <h3>Hello!</h3>
-            <p>Welcome to IronSkydive, the best adventure you will ever have.</p>
-            <a href="#">Learn More</a>
+            <p class="text">Welcome to IronSkydive, the best adventure you will ever have.</p>
+            <a href="#" class="link-btn">Learn More</a>
         </article>
         <article>
             <h3>About us</h3>
-            <p>We like a lot programming websites, but we also love to practice sport.</p>
-            <a href="#">Watch Video</a>
+            <p class="text">We like a lot programming websites, but we also love to practice sport.</p>
+            <a href="#" class="link-btn">Watch Video</a>
         </article>
         <article>
             <h3>Wanna join?</h3>
-            <p>Join our fitness program to be in good shape while learning.</p>
-            <a href="#">Register</a>
+            <p class="text">Join our fitness program to be in good shape while learning.</p>
+            <a href="#" class="link-btn">Register</a>
         </article>
     </section>
     <section>
