--- a/index.html
+++ b/index.html
@@ -42,41 +42,41 @@
     <section>
         <h3 id="structure">How do we structure the day?</h3>
         <div>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Train icon">
                 <h4>1. Training</h4>
                 <p>We teach all the necessary things to jump from the plane without any kind problem.</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="get ready icon">
                 <h4>2. Get ready</h4>
                 <p>You are already prepared, you just need the suit and a parachute. All sizes available.</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="Fly icon">
                 <h4>3. Fly</h4>
                 <p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="Jump icon">
                 <h4>4. Jump!</h4>
                 <p>You have done the most complicated. Just one step left... jump!</p>
             </article>
         </div>
     </section>
-    <section>
-        <h3 id="team">Team</h3>
-        <p>Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with these professionals, you won't go splat.</p>
+    <section  id="team" class="dark-background">
+        <h3>Team</h3>
+        <p class="section-text">Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with these professionals, you won't go splat.</p>
         <div>
             <article>
-                <span><b>Harold Rothstein,</b> <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold flying"></span>
-            </article>
-            <article>
-                <span><b>Susan Phillips,</b><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan flying"></span>
-            </article>
-            <article>
-                <span><b>Taylor Roberts,</b><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor flying"></span>
                 <hr>
+                <h4 class="member-name">Harold Rothstein<img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold flying"></h4>
+            </article>
+            <article>
+                <h4 class="member-name">Susan Phillips<img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan flying"></h4>
+            </article>
+            <article>
+                <h4 class="member-name">Taylor Roberts<img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor flying"></h4>
             </article>
         </div>
     </section>
@@ -127,12 +127,13 @@
         <h3>Schedule a Time Slot</h3>
 
     </section>
-    <footer>
+    <footer class="dark-background footer">
         <section>
             <h5>Contact Information</h5>
-            <address><br>IronSkydive</br><br>33 Rue la Fayette,</br><br>75009 Paris,</br><br>France</br>+33 (0) 619 193 088</br></address>
+            <address class="address">
+                <br>IronSkydive</br><br>33 Rue la Fayette,</br><br>75009 Paris,</br><br>France</br>+33 (0) 619 193 088</br></address>
             <h5>Follow Us</h5>
-            <ul>
+            <ul class="links">
                 <li><a href="">Twitter</a></li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Instagram</a></li>
