--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <ul>
+        <ul class="nav-bar-ul">
             <li><a href="#structure">Day Structure</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#schedule">Schedule</a></li>
