--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
         </aside>
     </header>
     <section id="general-information" class="dark-background">
-        <article>
+        <article class="container">
             <h3>Hello!</h3>
             <p class="text">Welcome to IronSkydive, the best adventure you will ever have.</p>
             <a href="#" class="link-btn">Learn More</a>
         </article>
-        <article>
+        <article class="container">
             <h3>About us</h3>
             <p class="text">We like a lot programming websites, but we also love to practice sport.</p>
             <a href="#" class="link-btn">Watch Video</a>
         </article>
-        <article>
+        <article class="container">
             <h3>Wanna join?</h3>
             <p class="text">Join our fitness program to be in good shape while learning.</p>
             <a href="#" class="link-btn">Register</a>
         </article>
     </section>
-    <section>
-        <h3 id="structure">How do we structure the day?</h3>
+    <section id="structure" class="container">
+        <h3>How do we structure the day?</h3>
         <div>
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Train icon">
@@ -80,8 +80,8 @@
             </article>
         </div>
     </section>
-    <section>
-        <h3 id="schedule">Schedule</h3>
+    <section id="schedule">
+        <h3>Schedule</h3>
         <table>
             <thead>
                 <tr>
