--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             </article>
         </div>
     </section>
-    <section id="schedule">
+    <section id="schedule" class="container">
         <h3>Schedule</h3>
-        <table>
+        <table class="schedule-table" cellpadding="0" cellspacing="0">
             <thead>
                 <tr>
                     <th>Time</th>
