--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <div>
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Train icon">
-                <h4>1. Training</h4>
+                <h4>Training</h4>
                 <p>We teach all the necessary things to jump from the plane without any kind problem.</p>
             </article>
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="get ready icon">
-                <h4>2. Get ready</h4>
+                <h4>Get ready</h4>
                 <p>You are already prepared, you just need the suit and a parachute. All sizes available.</p>
             </article>
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="Fly icon">
-                <h4>3. Fly</h4>
+                <h4>Fly</h4>
                 <p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p>
             </article>
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="Jump icon">
-                <h4>4. Jump!</h4>
+                <h4>Jump!</h4>
                 <p>You have done the most complicated. Just one step left... jump!</p>
             </article>
         </div>
@@ -67,9 +67,9 @@
     <section  id="team" class="dark-background">
         <h3>Team</h3>
         <p class="section-text">Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with these professionals, you won't go splat.</p>
+        <hr>
         <div>
             <article>
-                <hr>
                 <h4 class="member-name">Harold Rothstein<img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold flying"></h4>
             </article>
             <article>
@@ -139,6 +139,7 @@
                 <li><a href="">Instagram</a></li>
             </ul>
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.142047744348!2d2.3354330160472316!3d48.87456857928921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e38f817b573%3A0x48d69c30470e7aeb!2sIronhack!5e0!3m2!1sen!2ses!4v1495208746099" class="map-frame" frameborder="0" style="border:0" allowfullscreen></iframe>
     </footer>
 </body>
 </html>
