--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
     <header class="header">
         <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive logo"> IronSkydive</h1>
-        <h2>Let the trip begin</h2>
+        <h2>Let the trip begins</h2>
         <aside class="quote">
-            <br><small><em>"The best experience of our lives"</em></small><br>Ariel quiñones & Gonzalo Manrique, Ironhack Founders</br></p>
+            <br><small><em>"The best experience of our lives"</em></small><br>Ariel Quiñones & Gonzalo Manrique, Ironhack Founders</br></p>
         </aside>
     </header>
     <section id="general-information" class="dark-background">
